--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "nativewind": "^4.1.23",
     "prettier": "^3.5.3",
     "react": "18.3.1",
-    "react-native": "0.76.8",
-    "react-native-reanimated": "^3.16.2",
-    "react-native-safe-area-context": "^4.12.0",
+    "react-native": "0.76.9",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "tailwindcss": "^3.4.17"
   },
