--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "tailwindcss": "^3.4.17",
-    "expo-checkbox": "~4.0.1"
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
