--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.23.1",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-prettier": "^5.2.5",
     "expo": "~52.0.42",
@@ -17,6 +18,7 @@
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.20",
     "expo-status-bar": "~2.0.1",
+    "firebase": "^11.6.0",
     "nativewind": "^4.1.23",
     "prettier": "^3.5.3",
     "react": "18.3.1",
